--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Assets\Foundation\UIBase\BaseContext.cs" />
     <Compile Include="Assets\Foundation\UIBase\BaseView.cs" />
     <Compile Include="Assets\Foundation\UIBase\ContextManager.cs" />
+    <Compile Include="Assets\Foundation\UIBase\LoadingScreen.cs" />
     <Compile Include="Assets\Foundation\UIBase\UIManager.cs" />
     <Compile Include="Assets\Foundation\UIBase\UIType.cs" />
     <Compile Include="Assets\Foundation\UIComponent\GridScroller.cs" />
