--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Foundation\Extensions\AssetBuildBundle.cs" />
     <Compile Include="Assets\Foundation\Extensions\DictionaryExtension.cs" />
     <Compile Include="Assets\Foundation\Extensions\TransformExtension.cs" />
     <Compile Include="Assets\Foundation\GameRoot.cs" />
